build-logic: Use Java 21